--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./main.css">
-    <script type="module" src="./main.js" defer></script>
-
 </head>
 
 <body>
-    <textarea autofocus></textarea>
+    <ul>
+        <li><a href="./app-1/">app-1</a></li>
+    </ul>
 </body>
 
 </html>
